            - an grouped list of changes after topic in an logical order with all not noticeable changes removed
        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.


changelog of snapshot [next]
    - changed version tuple builder for mcpython
    - added profiler system with config options
    - refactored most of the stuff into the mcypthon-folder, but the folder itself is added to sys.path for backward
        compatibility [WARNING: this is an breaking change!!!!!!!!]
    - refactored much not-code related files into the home-folder
    - refactored & unpacked assets into the resources-folder

    fixed issues:
        long-term issues:
            - barrel rotation was not saved

        from previous snapshot:
            - dicts in config file failed to load
            - booleans where not correctly loaded


changelog of snapshot 20w22a released on 30.05.2020 (theme: feature cleanup & improvements)
    - optimized block rendering
    - re-ordered some UV-related stuff, you may want to update your own models
    - improved dependency system for mods
    - added config system for mods & internals [incompatible with mc config files]
    - improved existing factories & added some more factories & entries
    - improved exception handling
    - added StateConfigFile.py handling State-confog-files
    - deprecated a lot of stuff

    fixed issues:
        from versions before this snapshot:
            - block updates were not called in every case
            - walls and fences were not updating their state correctly
            - during printing an exception, an new exception could occur
            - event "worldgen:chunk:finished" was not called in most cases
            - data packs may not get unloaded when they needed to

changelog of release alpha 1.0.1