@@ -162,4 +162,4 @@ issue 203:
 issue 204:
     bug: debug world generates start chest
 
-[205]
+[205-207]
