@@ -42,16 +42,22 @@ information on development:
 
 
 changelog of snapshot [next]
+    WARNING: this snapshot WILL break some backward-compatibility as it moved a lot of stuff around. Use the constants
+    in globals.py for allocation.
+
     - changed version tuple builder for mcpython
     - added profiler system with config options
     - refactored most of the stuff into the mcypthon-folder, but the folder itself is added to sys.path for backward
         compatibility [WARNING: this is an breaking change!!!!!!!!]
     - refactored much not-code related files into the home-folder
     - refactored & unpacked assets into the resources-folder
+    - made inventory interaction subscriptions more fail-self
 
     fixed issues:
         long-term issues:
             - barrel rotation was not saved
+            - shift-clicking the output-slot of the crafting gave an exception
+            - closing the crafting table was deleting all items which were in the crafting grid
 
         from previous snapshot:
             - dicts in config file failed to load
